@@ -5,6 +5,7 @@ Summary of important user-visible changes for ncArray 1.0.2:
     ignoring NaNs
  ** ncarray nows depends on package netcdf (instead of octcdf)
  ** Add missing dependency to statistics
+ ** Avoid obsolete isequalwithequalnans functions
 
 Summary of important user-visible changes for ncArray 1.0.1:
 ------------------------------------------------------------
